# respfuzzer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  config.toml  config.toml.default  exp.md  lut.txt  pyproject.toml  setup.py
experiments/: requirements.txt
experiments/RQ1/: exp.md  plot.py
experiments/RQ1/LLM_testcases/: Logger.py  api_list.json  generate_tests_from_apis.py  generate_tests_from_apis_by_api.py
experiments/RQ1/coverage/: Logger.py  check_instrument_calls_fixed.py  cov.py  driver.py  instrument.py  seed_instrument_runner.py
experiments/RQ1/miniFuzz4All/: f4a_mutator.py  fuzz_library.py  test_f4a_mutator.py
experiments/RQ2/: exp.md  plot.py  run_f4a.sh  tracefuzz_seeds.json
experiments/RQ2/DyFuzz-patch/: apifuzzer.py  run_tracefuzz.py  run_tracefuzz_infinite.py
experiments/RQ2/miniFuzz4All/: f4a_mutator.py  fuzz_dataset.py  fuzz_dataset_infinite.py  fuzz_dataset_mix.py  fuzz_library.py  test_f4a_mutator.py
experiments/RQ3/: collect.sh  exp.md  exp.sh  libraries.conf  plot.py  plot2.py  plot_infinite.py  report.py  respfuzzer_seeds.json  tracefuzz_seeds.json
experiments/RQ3/DyFuzz-patch/: apifuzzer.py  run_respfuzzer.py  run_tracefuzz.py
experiments/RQ3/miniFuzz4All/: f4a_mutator.py  fuzz_dataset.py  fuzz_library.py  test_f4a_mutator.py
experiments/RQ4/: agentic_function_resolver_vul.py  exp.md  filter.py  final_validate.py  fuzz_dataset-RQ4-2.py  fuzz_dataset-RQ4-3.py  fuzz_dataset-RQ4-4.py  fuzz_dataset-RQ4-5.py  fuzz_dataset-backup.py  fuzz_exp-RQ4-NL.py  fuzz_exp-RQ4-NP.py  fuzz_exp-RQ4-NSF.py  fuzz_exp-RQ5-NCF.py  job_respfuzzer.sh  llm_mutator-RQ4-4.py  llm_mutator-RQ4-NSF.py  model_validate.py  report.py  simple_replay.py  summary_from_logs.py  vul_1_nltk.py  vul_2_nltk.py  vul_3_scipy.py  vul_4_torch.py
experiments/RQ4-3/: fuzz_dataset-RQ4-3.py
experiments/RQ4-4/: fuzz_dataset-RQ4-4.py
experiments/RQ4-5/: fuzz_dataset-RQ4-5.py
experiments/RQ5/: agentic_function_resolver_vul.py  exp.md  filter.py  final_validate.py  model_validate.py  report.py  simple_replay.py  summary_from_logs.py  vul_1_nltk.py  vul_2_nltk.py  vul_3_scipy.py  vul_4_torch.py
experiments/miniFuzz4All/: test_f4a_mutator.py
scripts/: batch_run.sh  dev-format-code.sh  format.sh  install_lut.sh  install_lut_auto.sh  libraries.conf  run_agentic_api_resolver.sh  run_agentic_function_resolver.sh  run_extract_functions.sh  run_fuzz_library.sh  run_generate_seeds.sh  run_library_visitor.sh
src/: chain_rng.rs  lib.rs  mutator.rs
src/mplfuzz/: agentic_api_resolver.py  api_call_executor.py  apicall_mutants_executor.py  library_api_resolver.py  library_apicall_mutator.py  library_mcp_generator.py  library_mcp_generator_old.py  library_visitor.py  mcp_api_resolver.py  mcp_api_resolver_old.py  models copy.py  models.py  mutate.pyi  mutator.py
src/mplfuzz/db/: api_parse_record_table.py  apicall_execution_record_table.py  apicall_mutatation_record_table.py  apicall_solution_record_table.py  base.py  filter.py  mcpcode_generation_record_table.py  mutant_execution_record_table.py
src/mplfuzz/fuzz/: fuzz_data.py  fuzz_function.py  fuzz_library.py  instrument.py  safe_fuzz.py
src/mplfuzz/parsers/: __init__.py  function_parser.py  pyi_parser.py
src/mplfuzz/utils/: config.py  db.py  db_delete_duplicate_api.py  db_delete_invalid_api.py  db_tools.py  dbviewer.py  obj_util.py  paths.py  redis_util.py  result.py
src/respfuzzer/: models.py  repos.py
src/respfuzzer/cmd/: db_tools.py  fuzz.py  reflective_seeder.py  replay_mutation.py
src/respfuzzer/lib/: agentic_function_resolver.py  library_visitor.py
src/respfuzzer/repos/: base.py  function_table.py  mutant_table.py  seed_table.py
src/respfuzzer/utils/: config.py  db_tools.py  dump.py  export_dyfuzz.py  llm_helper.py  paths.py  process_helper.py  redis_util.py
src/tracefuzz/: agentic_function_resolver.py  library_visitor.py  models.py  mutate.pyi  mutator.py
src/tracefuzz/c/: mutate.cxx  mutate.h
src/tracefuzz/cmd/: db_tools.py  fuzz.py  reflective_seeder.py  replay_mutation.py
src/tracefuzz/db/: base.py  function_table.py  seed_table.py  solve_history_table.py
src/tracefuzz/fuzz/: fuzz_dataset.py  fuzz_function.py  fuzz_library.py  fuzz_library_v1.py  instrument.py  replay_mutation.py
src/tracefuzz/lib/: agentic_function_resolver.py
src/tracefuzz/parsers/: function_parser.py  pyi_parser.py
src/tracefuzz/repos/: base.py  function_table.py  mutant_table.py  seed_table.py  solve_history_table.py
src/tracefuzz/utils/: config.py  db_tools.py  dump.py  filter.py  (+5 more)
tests/: test_attempter.py  test_db.py  test_library_visitor.py  test_llm_mutator.py  test_mcp_api.py  test_mutate.py  test_mutator.py  test_queit_executor.py
tests/agentic_api_resolver/: test_attempter.py  test_queit_executor.py  test_reasoner.py  test_solve.py
tests/agentic_function_resolver/: test_attempter.py  test_judger.py  test_queit_executor.py  test_reasoner.py  test_solve.py
tests/db/: test_function_table.py  test_models.py  test_seed_table.py  test_solve_history_table.py
tests/fuzz/: test_fuzz_function.py  test_instrument.py  test_llm_mutator.py  test_mutate.py
tests/parsers/: test_function_parser.py  test_pyi_parser.py
(+21 files in other folders)
