[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "tracefuzz"
version = "0.1.0"
description = "Fuzz Python Libraries as MCP services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.109.1",
    "psutil>=7.1.0",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
    "sqlite-web>=0.6.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
]

[tool.pytest.ini_options]

addopts = "--cov=src --cov-report=html:htmlcov --cov-report=term-missing -q"

# 改变用例的查找路径规则，当前目录的testcase文件夹
testpaths = ["tests"]

# 模块名的规则，配置测试搜索的模块文件名称
python_files = ["test_*.py"]

# 类名的规则，配置测试搜索的测试类名
python_classes = ["Test*"]

# 方法名的规则，配置测试搜索的测试函数名
python_functions = ["test_*"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# Use ruff to automatically remove unused imports as part of formatting workflow.
[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["F401", "F403"]

[tool.black]
line-length = 88
target-version = ["py313"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[project.scripts]
library_visitor = "tracefuzz.library_visitor:main"
agentic_function_resolver = "tracefuzz.agentic_function_resolver:main"
fuzz_library = "tracefuzz.fuzz.fuzz_library:main"
fuzz_dataset = "tracefuzz.fuzz.fuzz_dataset:main"
db_tools = "tracefuzz.utils.db_tools:main"
replay_mutation = "tracefuzz.fuzz.replay_mutation:main"
export_dyfuzz = "tracefuzz.utils.export_dyfuzz:main"