[project]
name = "tracefuzz"
version = "0.1.0"
description = "Fuzz Python Libraries as MCP services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "autoflake>=2.3.1",
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "openai>=1.109.1",
    "psutil>=7.1.0",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
    "sqlite-web>=0.6.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html:htmlcov --cov-report=term-missing -q"
# 改变用例的查找路径规则，当前目录的testcase文件夹
testpaths = ["tests"]
# 模块名的规则，配置测试搜索的模块文件名称
python_files = ["test_*.py"]
# 类名的规则，配置测试搜索的测试类名
python_classes = ["Test*"]
# 方法名的规则，配置测试搜索的测试函数名
python_functions = ["test_*"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# Use ruff to automatically remove unused imports as part of formatting workflow.
[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["F401", "F403"]

[tool.black]
line-length = 88
target-version = ["py313"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "tracefuzz.lib.fuzz.mutate"
python-packages = ["tracefuzz"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[project.scripts]
db_tools = "tracefuzz.cmd.db_tools:main"
reflective_seeder = "tracefuzz.cmd.reflective_seeder:main"
fuzz = "tracefuzz.cmd.fuzz:main"
replay_mutation = "tracefuzz.cmd.replay_mutation:main"
