[project]
name = "respfuzzer"
version = "0.1.0"
description = "Reflective Seed Generation and Semantic-Guided Mutation for Python Library Fuzzing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "loguru>=0.7.3",
    "openai>=1.109.1",
    "psutil>=7.1.0",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "pre-commit",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html:htmlcov --cov-report=term-missing -q"
# 改变用例的查找路径规则，当前目录的testcase文件夹
testpaths = ["tests"]
# 模块名的规则，配置测试搜索的模块文件名称
python_files = ["test_*.py"]
# 类名的规则，配置测试搜索的测试类名
python_classes = ["Test*"]
# 方法名的规则，配置测试搜索的测试函数名
python_functions = ["test_*"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# Use ruff to automatically remove unused imports as part of formatting workflow.
[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["F401", "F403"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[project.scripts]
db_tools = "respfuzzer.cmd.db_tools:main"
reflective_seeder = "respfuzzer.cmd.reflective_seeder:main"
fuzz = "respfuzzer.cmd.fuzz:main"
replay_mutation = "respfuzzer.cmd.replay_mutation:main"
